--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
         integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Bootstrap Theme</title>
+    <title>Welcome Glozzom</title>
 </head>
 
 <body>
@@ -152,9 +151,9 @@
     <!-- VIDEO PLAY section -->
     <section id="video-play">
         <div class="dark-overlay">
-            <div class="row">
-                <div class="col">
-                    <div class="container p-5">
+            <div class="container p-5">
+                <div class="row">
+                    <div class="col">
                         <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA"
                             data-toggle="modal" data-target="#videoModal">
                             <i class="fas fa-play fa-3x"></i>
@@ -241,7 +240,7 @@
     <!-- NEWSLETTER section ends-->
 
     <!-- FOOTER -->
-    <footer id="main-footer" class="text-center">
+    <footer id="main-footer" class="text-center p-4">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -278,7 +277,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
         integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g=="
         crossorigin="anonymous"></script>
-    <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
     <script>
 
